--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Vala 0.10.1
+===========
+
+ * Remove outdated GTK+ 3 bindings.
+ * Many bug fixes and binding updates.
+
 Vala 0.10.0
 ===========
 
