--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Vala 0.11.2
+===========
+
+ * Update libnotify bindings to 0.7.0.
+ * Improvements to the .gir reader.
+ * Bug fixes and binding updates.
+
 Vala 0.11.1
 ===========
 
