--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Vala 0.11.3
+===========
+
+ * Support BusName sender parameter in GDBus servers.
+ * More refactoring in the code generator.
+ * Many bug fixes and binding updates.
+
 Vala 0.11.2
 ===========
 
