--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Vala 0.11.4
+===========
+
+ * Add index_of, index_of_char, and char_count to string class.
+ * Many bug fixes and binding updates.
+
 Vala 0.11.3
 ===========
 
