--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Vala 0.11.6
+===========
+
+ * Add parse and try_parse methods to boolean and numeric types.
+ * Add clutter-gtk-1.0 bindings.
+ * Add pixmap-1 bindings (Evan Nemerson).
+ * Many bug fixes and binding updates.
+
 Vala 0.11.5
 ===========
 
