--- a/THANKS
+++ b/THANKS
@@ -122,6 +122,7 @@ Sebastian Pölsterl
 Sebastian Spaeth
 Shawn Ferris
 Simon Wenner
+Stefano Debenedetti
 Stéphan Kochen
 Tai Chi Minh Ralph Eastwood
 Thijs Vermeir
