--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Vala 0.11.7
+===========
+
+ * Add support for async signal handlers (Frederik Sdun).
+ * More refactoring in the code generator (Luca Bruno).
+ * Improvements to the .gir writer (Michal Hruby).
+ * Many bug fixes and binding updates.
+
 Vala 0.11.6
 ===========
 
