--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Vala 0.12.0
+===========
+
+ * Add get_next_char to string class.
+ * Many bug fixes and binding updates.
+
 Vala 0.11.7
 ===========
 
