Add documentation for --metadatadir in the valac and vapigen manpage

--- a/doc/valac.1
+++ b/doc/valac.1
@@ -18,11 +18,14 @@ source code.
 .TP
 .B \--help
 .TP
+.B \--vapidir=\fIDIRECTORY\fR...
+Look for package bindings in \fIDIRECTORY\fR
+.TP
 .B \--girdir=\fIDIRECTORY\fR...
 Look for .gir files in \fIDIRECTORY\fR
 .TP
-.B \--vapidir=\fIDIRECTORY\fR...
-Look for package bindings in \fIDIRECTORY\fR
+.B \--metadatadir=\fIDIRECTORY\fR...
+Look for GIR .metadata files in \fIDIRECTORY\fR
 .TP
 .B \--pkg=\fIPACKAGE\fR...
 Include binding for \fIPACKAGE\fR
