--- a/doc/vapigen.1
+++ b/doc/vapigen.1
@@ -26,6 +26,12 @@ Show help option
 .B \--vapidir=\fIDIRECTORY\fP
 Look for package bindings in \fIDIRECTORY\fP.
 .TP
+.B \--girdir=\fIDIRECTORY\fP
+Look for GIR bindings in \fIDIRECTORY\fP.
+.TP
+.B \--metadatadir=\fIDIRECTORY\fP
+Look for GIR .metadata files in \fIDIRECTORY\fP.
+.TP
 .B \--pkg=\fIPACKAGE\fP
 Include binding for \fIPACKAGE\fP
 .TP
