--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Vala 0.13.0
+===========
+
+ * More refactoring in the code generator.
+ * Improvements to the .gir reader.
+ * Switch JSON-GLib bindings to .gir.
+ * Drop deprecated support for D-Bus GLib in favor of GDBus.
+ * Many bug fixes and binding updates.
+
 Vala 0.12.0
 ===========
 
