--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Vala 0.13.4
+===========
+
+ * Switch gudev-1.0 bindings to .gir.
+ * Switch mx-1.0 bindings to .gir.
+ * Many bug fixes and binding updates.
+
 Vala 0.13.3
 ===========
 
