--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Vala is a new programming language that aims to bring modern programming
+Vala is a programming language that aims to bring modern programming
 language features to GNOME developers without imposing any additional
 runtime requirements and without using a different ABI compared to
 applications and libraries written in C.
