--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Vala 0.17.1
+===========
+
+ * Improve assertion messages.
+ * Add --enable-gobject-tracing commandline option.
+ * Bug fixes and binding updates.
+
 Vala 0.17.0
 ===========
 
