--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Vala 0.17.3
+===========
+
+ * Require and target GLib >= 2.18.
+ * Support async creation methods.
+ * Bug fixes and binding updates.
+
 Vala 0.17.2
 ===========
 
