--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Vala 0.17.5
+===========
+
+ * Support subclassing of GLib.Source.
+ * Switch pango bindings to .gir.
+ * Add gstreamer-1.0 core bindings.
+ * Add gst-plugins-base-1.0 bindings.
+ * Add gobject-introspection-1.0 bindings.
+ * Bug fixes and binding updates.
+
 Vala 0.17.4
 ===========
 
