Document --api-version in the man page

--- a/doc/valac.1
+++ b/doc/valac.1
@@ -48,6 +48,9 @@ Output directory
 .B \--version
 Display version number
 .TP
+.B \--api-version
+Display API version number
+.TP
 .B \-C, --ccode
 Output C code
 .TP
