--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Vala 0.19.0
+===========
+
+ * Support scope = "async" attribute for parameters.
+ * Add --api-version option.
+ * Add atspi-2 bindings.
+ * Add gstreamer-rtsp-server-1.0 bindings.
+ * Bug fixes and binding updates.
+
 Vala 0.18.0
 ===========
 
