Add --shared-library option for GIR files
Fixes bug 585116

--- a/doc/valac.1
+++ b/doc/valac.1
@@ -36,6 +36,9 @@ Output VAPI file name
 .B \--library=\fINAME\fR
 Library name
 .TP
+.B \--shared-library=\fINAME\fR
+Shared library name used in generated .gir
+.TP
 .B \--gir=\fINAME\fR-\fIVERSION\fR.gir
 GObject-Introspection repository file name
 .TP
