--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Vala 0.29.3
+===========
+
+ * Add --shared-library option for GIR files.
+ * Bug fixes and binding updates.
+
 Vala 0.29.2
 ===========
 
