manpage: add --no-color
(cherry picked from commit b86073360c998cd67561b1f1477cf99a89153f76)

--- a/doc/valac.1
+++ b/doc/valac.1
@@ -138,6 +138,9 @@ Keep temporary files
 .B \--profile=\fIPROFILE\fR
 Use the given profile instead of the default
 .TP
+.B \--no-color
+Disable colored output
+.TP
 .B \-q, --quiet
 Do not print messages to the console
 .TP
