--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Vala 0.31.1
+===========
+
+ * Introduce [Version] attribute.
+ * Require and target GLib >= 2.32.
+ * Bug fixes and binding updates.
+
 Vala 0.30.0
 ===========
 
