--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Vala 0.34.1
+===========
+
+ * Add support for the \v escape character.
+ * Bug fixes and binding updates.
+
 Vala 0.34.0
 ===========
 
