--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Vala 0.34.6
+===========
+
+ * Bug fixes and binding updates.
+ * Update manpages.
+ * Update manual.
+
 Vala 0.34.5
 ===========
 
