valac: State default output directory is current working directory
https://bugzilla.gnome.org/show_bug.cgi?id=740303

--- a/doc/valac.1
+++ b/doc/valac.1
@@ -52,7 +52,7 @@ GObject\-Introspection repository file name
 Base source directory
 .TP
 \fB\-d\fR, \fB\-\-directory\fR=\fI\,DIRECTORY\/\fR
-Output directory
+Change output directory from current working directory
 .TP
 \fB\-\-version\fR
 Display version number
