--- a/doc/valac.1
+++ b/doc/valac.1
@@ -172,7 +172,15 @@ Do not print messages to the console
 Print additional messages to the console
 .TP
 \fB\-\-no\-color\fR
-Disable colored output
+Disable colored output, alias for \fB\-\-color\fR=\fI\,never\/\fR
+.TP
+\fB\-\-color\fR=\fI\,WHEN\/\fR
+Enable color output, options are 'always', 'never', or 'auto'
+.RS
+When no value is given \fIalways\fR is implied. When neither \fB--color\fR
+or \fB--no-color\fR are declared then \fB--color\fR=\fIauto\fR is used where
+output is colored when stderr is a terminal.
+.RE
 .TP
 \fB\-\-target\-glib\fR=\fI\,MAJOR\/\fR.MINOR
 Target version of glib for code generation
