--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,28 @@
+Vala 0.36.4
+===========
+
+ * Highlights
+  - Don't warn about deprecated symbols if installed_version is older
+  - Add --gresourcesdir option [#783133]
+
+ * Various bug fixes:
+  - gdbus: Don't leak nested HashTable on deserialization [#782719]
+  - Fix finally blocks with async yields [#741929]
+  - Handle non-null in coalescing expression [#611223]
+  - Make the task_complete flag for < 2.44 more similar to >= 2.44 [#783543]
+  - Nullable ValueType requires POINTER as marshaller signature [#783897]
+  - NoAccessorMethod attribute is allowed for gobject-properties only
+  - girparser: Fix parsing of delegate-alias without target
+  - compiler: Use API_VERSION instead of stripping PACKAGE_SUFFIX
+  - girwriter: Write length-parameters of arrays with rank > 1 [#758019]
+
+ * Bindings:
+  - gio-2.0: Use default 'length = null' for DataInputStream.read_line_utf8*
+    [#783351]
+  - gobject-2.0: Add GLib.ParamSpecPointer
+  - poppler-glib: Update to 0.54.0
+  - gstreamer-1.0: Various binding fixes
+
 Vala 0.36.3
 ===========
  * Various bug fixes:
