--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,25 @@
+Vala 0.36.5
+===========
+ * Various bug fixes:
+  - codegen:
+    + Initialize temp-variable for fixed-size arrays to zero first [#787152]
+    + Actually write declaration for GNodeTraverseFunc wrapper [#786845]
+    + Don't transfer ownership of variable if target-type is unknown [#736774]
+    + Adjust format-index for printf/scanf-methods which throw errors [#781061]
+    + Include glib-object.h for Enums/Structs with type_id
+  - vapigen: Mark given source-files as such and force girparser to handle them
+  - tests: Fix some syntax issues [#786652]
+  - Add .editorconfig file [#786620]
+
+ * Bindings:
+  - gtk+-3.0: Update to 3.22.19+70b61973
+  - gtk+-4.0: Update to 3.91.2+80e32390
+  - gtk+-4.0: Make Gsk.Texturer.for_*() static factory methods
+  - libgdata: Make Authorizer.reauth_* methods virtual [#779229]
+  - libxml-2.0: Update Xml.ParserOption [#785585]
+  - libxml-2.0: Bind xmlLastElementChild and xmlPreviousElementSibling
+  - gobject-2.0: Add required type_id attributes to all ParamSpec subclasses
+
 Vala 0.36.4
 ===========
 
