--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Vala 0.36.7
+===========
+ * Various bug fixes:
+  - codegen: Prioritize "array_length=true" over "array_null_terminated=true"
+    [#788775]
+  - codegen: Avoid possible conflicts with internal property/signal defines
+    [#788964]
+
+ * Bindings:
+  - gio-2.0: Expose g_task_get_source_object as Task.get_unowned_source_object
+  - gtk+-4.0: Update to 3.92.1
+  - libxml-2.0: Add DTD methods [#789442]
+
 Vala 0.36.6
 ===========
  * Various bug fixes:
