compiler: Properly parse arguments for vala interpeter-mode
Arguments for the target need to be passed with --run-args from now on.

https://bugzilla.gnome.org/show_bug.cgi?id=663070

--- a/doc/valac.1
+++ b/doc/valac.1
@@ -196,6 +196,9 @@ Write vala build version in generated files
 .TP
 \fB\-\-disable\-version\-header\fR
 Do not write vala build version in generated files
+.TP
+\fB\-\-run\-args\fR
+Arguments passed to directly compiled executeable
 .SH BUGS
 https://bugzilla.gnome.org/page.cgi?id=browse.html&product=vala
 .SH "HOMEPAGE OR CONTACT"
