--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,27 @@
+Vala 0.39.2
+===========
+ * Various bug fixes:
+  - vala: Don't transform an explicit "null" into valid format-string [#791215]
+  - codegen: Don't create null-safe destroy-wrapper for GenericType [#791283]
+  - Improve error message for missing type-parameter on enclosing type [#587905]
+
+ * GIR parser:
+  - Allow change of parameter names
+  - Handle metadata for fields inside a transparent union
+  - Accept setters with boolean return-type as valid property-accessor
+  - Don't mark simple-type out-parameters with '?' as nullable
+
+ * Valadoc
+  - libvaladoc: Actually resolve "percnt;" to '%'
+
+ * Bindings:
+  - glib-2.0: Fix potential null pointer dereference in string.joinv() [#791257]
+  - gobject-2.0: Add missing GType constants for fundamentals [#791023]
+  - gstreamer-1.0: Update from 1.13+ git master
+  - gtk+-3.0: Switch to GIR [#730746]
+  - gtk+-4.0: Update to 3.93.0+6af4947e
+  - posix: Move signal constants to an enum and add few missing ones [#790958]
+
 Vala 0.39.1
 ===========
  * Highlights
