--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,29 @@
+Vala 0.38.5
+===========
+ * Various improvements and bug fixes:
+  - codegen
+    + Only add property-enum and GParamSpec-array for GObject classes
+    + Add destroy param when invoking delegate returned by delegate [#792077]
+  - vala: Add pkgdatadir and pkglibdir to pkg-config file
+  - gidlparser: Update type qualifiers
+  - libvaladoc: Allow @link tags to be split over multiple lines [#646982]
+  - libvaladoc: Add support for single line documentation comments [#736483]
+  - vala: Fix parameter type inference of overridden async methods [#792660]
+  - codewriter: Don't use string.replace() to apply header_to_override [#731322]
+
+ * Bindings:
+  - glib-2.0: Add GLib.OPTION_REMAINING and GLib.OptionFlags.NONE
+  - gstreamer-1.0: Update from 1.13+ git master
+  - gtk+-2.0: Mark MessageDialog constructor parameter, message_format, as
+    nullable [#791570]
+  - gtk+-2.0/3.0: Don't hide user_data in Clipboard.set_with_data() [#792237]
+  - gtk+-3.0: Update to 3.22.26+6f26d0dc
+  - gtk+-4.0: Update to 3.93.0 and split Gsk.RenderNode into several classes
+  - libwnck-3.0: Update to 3.24.1
+  - posix: Add ctime(3) and fix binding of struct hostent and gethostbyname(3)
+  - webkit2gtk-4.0: Update to 2.19.5
+  - webkit2gtk-web-extension-4.0: Fix DOM.EventTarget interface
+
 Vala 0.38.4
 ===========
  * Various bug fixes:
